# estruturando_projeto_e_processos_do_zero

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
src/: app.py  backend.py  frontend.py  schemas.py
tests/: test_app.py  test_integration.py  test_schema.py
