[tool.poetry]
name = "estruturando-projeto-e-processos-do-zero"
version = "0.1.0"
description = ""
authors = ["Calel <borgescalel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
streamlit = "^1.45.0"
pydantic = {extras = ["email"], version = "^2.11.4"}
pytest = "^8.3.5"
selenium = "^4.32.0"
taskipy = "^1.14.1"
openpyxl = "^3.1.5"
pyproject-toml = "^0.1.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.14"
dotenv = "^0.9.9"
sqlalchemy = "^2.0.41"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
sentry-sdk = "^2.29.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "lsof -ti :8501 | xargs kill -9 | streamlit run src/app.py"
test = "lsof -ti :8501 | xargs kill -9 | pytest tests -v"